# rocket-api

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/20170122092655_notes/: down.sql  up.sql
src/: db.rs  error.rs  main.rs  models.rs  note.rs
