[package]
authors = ["Fredrik Andersson <fredrik.andersson@widespace.com>"]
name = "rocket-api"
version = "0.1.0"

[dependencies]
rocket = "0.1.5"
rocket_codegen = "0.1.5"
rocket_contrib = "*"
diesel = "0.9.0"
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
dotenv = "0.8.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "*"
