[package]
authors = ["Fredrik Andersson <fredrik.andersson@widespace.com>"]
name = "rocket-api"
version = "0.1.0"

[dependencies]
rocket = "0.1.5"
rocket_codegen = "0.1.5"
rocket_contrib = "*"
diesel = "0.9.0"
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
dotenv = "0.8.0"
serde = "0.8.23"
serde_json = "0.8.6"
serde_derive = "0.8.23"
lazy_static = "0.2.2"
r2d2 = "0.7.1"
r2d2-diesel = "0.9.0"
